feat: add step and speed controls

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="controls">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
+        <button id="step">Step</button>
+        <label for="speed">Speed:</label>
+        <input type="range" id="speed" min="50" max="1000" step="50" value="200">
         <button id="clear">Clear</button>
         <button id="random">Random</button>
     </div>
