Add step-back feature and color-coded cells

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <button id="start">Start</button>
         <button id="stop">Stop</button>
         <button id="step">Step</button>
+        <button id="back" disabled>Back</button>
         <label for="speed">Speed:</label>
         <input type="range" id="speed" min="50" max="1000" step="50" value="200">
         <label for="rows">Rows:</label>
