--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
 <body>
     <h1>Conway's Game of Life</h1>
     <div id="controls">
-        <button id="start" title="Start">▶</button>
-        <button id="stop" title="Stop">■</button>
-        <button id="step" title="Step">⏭</button>
-        <button id="back" title="Back" disabled>⏮</button>
-        <label for="speed" title="Speed">⚡</label>
-        <input type="range" id="speed" min="50" max="1000" step="50" value="200">
-        <label for="rows" title="Rows">R</label>
-        <input type="number" id="rows" min="10" max="200" value="50">
-        <label for="cols" title="Cols">C</label>
-        <input type="number" id="cols" min="10" max="200" value="50">
-        <button id="clear" title="Clear">⌧</button>
-        <button id="random" title="Random">🎲</button>
-        <button id="export" title="Export">⇩</button>
-        <button id="import" title="Import">⇧</button>
-        <button id="info" title="Info">ℹ️</button>
+        <div class="buttons">
+            <button id="start" title="Start"><span class="icon">▶</span><span class="text">Start</span></button>
+            <button id="stop" title="Stop"><span class="icon">■</span><span class="text">Stop</span></button>
+            <button id="step" title="Step"><span class="icon">⏭</span><span class="text">Step</span></button>
+            <button id="back" title="Back" disabled><span class="icon">⏮</span><span class="text">Back</span></button>
+            <button id="clear" title="Clear"><span class="icon">⌧</span><span class="text">Clear</span></button>
+            <button id="random" title="Random"><span class="icon">🎲</span><span class="text">Random</span></button>
+            <button id="export" title="Export"><span class="icon">⇩</span><span class="text">Export</span></button>
+            <button id="import" title="Import"><span class="icon">⇧</span><span class="text">Import</span></button>
+            <button id="info" title="Info"><span class="icon">ℹ️</span><span class="text">Info</span></button>
+        </div>
+        <div class="settings">
+            <label for="speed" class="text">Speed:</label>
+            <input type="range" id="speed" min="50" max="1000" step="50" value="200">
+            <label for="rows" class="text">Rows:</label>
+            <input type="number" id="rows" min="10" max="200" value="50">
+            <label for="cols" class="text">Cols:</label>
+            <input type="number" id="cols" min="10" max="200" value="50">
+        </div>
     </div>
     <canvas id="board" width="500" height="500"></canvas>
     <div id="overlay" class="hidden">
         <div class="modal">
+            <button id="close" class="close-btn" title="Close">✖</button>
             <h2>Conway's Game of Life</h2>
             <p>The universe of the Game of Life is an infinite grid of cells. Each cell has two states: alive or dead. At each step in time the following transitions occur:</p>
             <ul>
@@ -36,7 +41,6 @@
                 <li>A live cell with more than three live neighbours dies.</li>
                 <li>A dead cell with exactly three live neighbours becomes a live cell.</li>
             </ul>
-            <button id="close">Close</button>
         </div>
     </div>
     <input type="file" id="fileInput" accept="application/json" style="display:none">
