Add theme toggle and play button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h1>Conway's Game of Life</h1>
     <div id="controls">
         <div class="buttons">
-            <button id="start" title="Start"><span class="icon">▶</span><span class="text">Start</span></button>
-            <button id="stop" title="Stop"><span class="icon">■</span><span class="text">Stop</span></button>
+            <button id="play" title="Play"><span class="icon">▶</span><span class="text">Play</span></button>
             <button id="step" title="Step"><span class="icon">⏭</span><span class="text">Step</span></button>
             <button id="back" title="Back" disabled><span class="icon">⏮</span><span class="text">Back</span></button>
             <button id="clear" title="Clear"><span class="icon">⌧</span><span class="text">Clear</span></button>
@@ -19,6 +18,7 @@
             <button id="export" title="Export"><span class="icon">⇩</span><span class="text">Export</span></button>
             <button id="import" title="Import"><span class="icon">⇧</span><span class="text">Import</span></button>
             <button id="info" title="Info"><span class="icon">ℹ️</span><span class="text">Info</span></button>
+            <button id="theme" title="Toggle theme"><span class="icon">🌙</span><span class="text">Theme</span></button>
         </div>
         <div class="settings">
             <label for="speed" class="text">Speed:</label>
