--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <div id="controls">
         <div class="buttons">
             <button id="play" title="Play"><span class="icon">▶</span><span class="text">Play</span></button>
-            <button id="step" title="Step"><span class="icon">⏭</span><span class="text">Step</span></button>
-            <button id="back" title="Back" disabled><span class="icon">⏮</span><span class="text">Back</span></button>
+            <span class="step-back">
+                <button id="step" title="Step"><span class="icon">⏭</span><span class="text">Step</span></button>
+                <button id="back" title="Back" disabled><span class="icon">⏮</span><span class="text">Back</span></button>
+            </span>
             <button id="clear" title="Clear"><span class="icon">⌧</span><span class="text">Clear</span></button>
             <button id="random" title="Random"><span class="icon">🎲</span><span class="text">Random</span></button>
             <button id="export" title="Export"><span class="icon">⇩</span><span class="text">Export</span></button>
